fixed: The icon behind the title of first card

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     --fontweight-600: 600;
     --fontweight-500: 500;
 
-    --max-width: 1440px;
+    --max-width: 1000px;
 
     --opacity-50: 50%;
     --opacity-70: 70%;
@@ -67,6 +67,16 @@ img {
     border-radius: 10px;
     box-shadow: 0px 4px 12px rgba(0,0,0,0.1);
     transition: transform 0.5s ease-in-out;
+    position: relative;
+}
+
+.testimonial_card-icon-quote {
+    position: absolute;
+    top: 0px;
+    right: 16%;
+    width: 80px;
+    height: 80px;
+    z-index: 1;
 }
 
 .testimonial_card:hover {
@@ -75,7 +85,13 @@ img {
 
 .testimonial_daniel {
     background-color: var(--color-violet);
+    position: relative;
 }
+
+.testimonial_daniel .testimonial_title{
+    z-index: 2;
+}
+
 .testimonial_jonathan {
     background-color: var(--color-dark-grayish-blue);
 }
@@ -91,6 +107,7 @@ img {
 
 .testimonial_profile {
     display: flex;
+    width: 100%;
     flex-direction: row;
 }
 
